[package]
name = "project-rethers"
version = "0.1.0"
edition = "2021"
authors = ["tsuigeo <tsui.geoffrey@gmail.com>"]

[workspace]
members = [
  "config",
  "rethers"
]

[dependencies]
dotenv = "0.15.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.56"
config = { path = "./config" }
rethers = { path = "./rethers" }
teloxide = "0.9"

[[example]]
name = "sample_rethers_log"
path = "examples/sample_rethers_log.rs"
