[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls"] }
tokio = { version = "1", features = ["full"] }
async-recursion = "1.0.0"
chrono = "0.4.19"